--- a/Experiement/Experiement.vcxproj.filters
+++ b/Experiement/Experiement.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="TSNE.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SNE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
